--- a/Sass/_common.scss
+++ b/Sass/_common.scss
@@ -6,4 +6,15 @@
     margin: 0;
     box-sizing: border-box;
     font-size: 16px;
+
+    a{
+        text-decoration: none;
+        color: unset;
+    }
+
+    ul{
+    margin-bottom: 0;
+    list-style: none;
+
+    }
 }
