--- a/Sass/_common.scss
+++ b/Sass/_common.scss
@@ -7,14 +7,25 @@
     box-sizing: border-box;
     font-size: 16px;
 
+    // Reset Some Properties
+
     a{
         text-decoration: none;
         color: unset;
+
+        &:hover{
+            color: unset;
+        }
     }
 
     ul{
     margin-bottom: 0;
     list-style: none;
 
+    }
+
+    button{
+        // background-color: unset;
+        // border:unset;
     }
 }
