--- a/Sass/_common.scss
+++ b/Sass/_common.scss
@@ -8,7 +8,6 @@
     font-size: 16px;
 
     // Reset Some Properties
-
     a{
         text-decoration: none;
         color: unset;
@@ -21,11 +20,10 @@
     ul{
     margin-bottom: 0;
     list-style: none;
-
     }
 
     button{
-        // background-color: unset;
-        // border:unset;
+        background-color: unset;
+        border:unset;
     }
 }
